test/scc_test/exp/semantic-errors/005.t
void test()
{
    struct 
    {
        int x;
    } a;

    a.b;
}